2001-07-16  Yuuichi Teranishi  <teranisi@gohome.org>

	* es-monitor.el: New file.

	* elserv.el (elserv-publish): Added description as first argument.
	(elserv-execute-service-maybe): Renamed from
	elserv-call-service-function-maybe.
	(elserv-execute-service-maybe): Use intern-soft instead of intern.
	(elserv-service-directory): Added argument `doc'.
	(elserv-service-string): Ditto.
	(elserv-service-function): Ditto.
	(elserv-publish-default): Publish monitor.

	* es-demo.el (elserv-demo-publish): Added description.

	* es-wiki.el (elserv-wiki-publish): Ditto.

	* es-mhc.el (elserv-mhc-publish): Ditto.

	* es-mhc.el (elserv-mhc-icon-publish-path): New user option.
	(elserv-mhc-icon-path): Changed default value as elserv-icon-path.
	(elserv-mhc/icon-setup): Eliminated.
	(elserv-mhc-icon-string): Changed to use elserv-mhc-icon-publish-path.
	(elserv-mhc-make-todo-list): Use elserv-mhc/icon-image-alist.
	(elserv-mhc/icon-image-alist): New internal variable.
	(elserv-mhc-icon-setup): Rewritten.

	* elserv.el: Defcustomized.

	* elserv-autoindex.el (elserv-autoindex-http-header): Don't hard code
	icon path.
	(elserv-autoindex-get-icon): Ditto.
	(elserv-autoindex-icon-alist): Ditto;
	Renamed from elserv-autoindex-icon-alist.
	(elserv-autoindex-list-format): Added space.
	(elserv-autoindex): Use elserv-icon-publish-path.
	(elserv-autoindex-get-attr): Ditto.
	(elserv-autoindex-get-attr): Bind system-time-locale as "C".
	(elserv-autoindex-get-icon): Renamed

	* elserv.el (elserv-directory-autoindex): New variable
	(Renamed from elserv-options-indexes).
	(elserv-icon-path): New variable.
	(elserv-icon-publish-path): Ditto.
	(elserv-server-eol): Define as constant.
	(elserv-client-eor): Ditto.
	(elserv-service-directory): Fixed.
	(elserv-service-function): Fixed.
	(elserv-publish-default): Publish elserv-icon-path on
	elserv-icon-publish-path.

	* es-wiki.el (elserv-wiki-function): Fixed default page detection.
	(elserv-wiki-publish): Fixed.
